recommend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rec-dep
  name: rec-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rec
  template:
    metadata:
      labels:
        app: rec
    spec:
      containers:
        - image: 178020491921.dkr.ecr.ap-northeast-2.amazonaws.com/recommend:7
          name: recommend
          command: ["python", "recommend.py"]
