deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: reservation-svc
spec:
  selector:
    app: reservation-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reservation-app
  template:
    metadata:
      name: reservation-pod
      labels:
        app: reservation-app
    spec:
      containers:
      - name: reservation-con
        image: 178020491921.dkr.ecr.ap-northeast-2.amazonaws.com/reservationapp:2.0
