recommend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommend-svc
spec:
  selector:
    app: rec
  ports:
    - port: 5000
      targetPort: 5000
